# AuthCat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxyfile
.github/workflows/: static.yml
include/AuthCat/: auth.hpp
include/AuthCat/db/: Credentials.hpp  User.hpp
libs/: CMakeLists.txt
src/: User.cpp  User_client.cpp  auth_client.cpp  main.cpp
src/client/: User.cpp  auth.cpp
src/server/: User.cpp  auth.cpp
